OAK-10136: improved test code